bottons 'up', 'down', 'right' and 'left' work after the 'Take Off' is clicked

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,13 @@
     height: 80%;
     width: 40%;
     position: relative;
-    align-items: center;
+    /* align-items: center; */
 }
 
 #rocket {
     position: absolute;
-    bottom: 0px;
+    bottom: 0%;
+    left: 40%;
 }
 
 #flightStatus {
